--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,18 +6,11 @@ on:
       - main
 
 jobs:
-  create-release:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Create Release
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Release
         uses: softprops/action-gh-release@v2
-        with:
-          tag_name: ${{ github.ref }} # 使用 git tag 作为 release 的 tag
-          release_name: Release ${{ github.ref }} # Release 名称
-          body: |
-            新版本发布了！请查看 [变更日志](CHANGELOG.md) 以获取更多信息。
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # 使用 GitHub 提供的 Token
+        if: startsWith(github.ref, 'refs/tags/')
