--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,11 +8,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Generate Changelog
+        run: echo "# Good things have arrived" > ${{ github.workspace }}-Release.txt
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: v0.0.2
-          body_path: Release.txt
-          files: |
-            Release.txt
-            LICENSE
+          body_path: ${{ github.workspace }}-Release.txt
