--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,15 +11,18 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Build
-        run: echo ${{ github.sha }} > Release.md
-      - name: test
-        run: cat Release.md
+      - name: Read Release.md
+        id: read_release
+        run: |
+          echo "RELEASE_BODY<<EOF" >> $GITHUB_ENV
+          cat Release.md >> $GITHUB_ENV
+          echo -e "\n## 新版本发布！\n请查看 [变更日志](CHANGELOG.md) 以获取更多信息。" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: v0.0.2
-          body_path: ./Release.md
+          body: ${{ env.RELEASE_BODY }}
           files: |
             Release.md
             LICENSE
