--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,9 +11,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        if: startsWith(github.ref, 'refs/tags/')
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Read RELEASE.md
+      - name: Read RELEASES.md
         id: read_release
         run: |
           TODAY=$(date '+%Y-%m-%d')
@@ -22,7 +23,7 @@ jobs:
 
           echo  -e "\`$TODAY\`\n" >> $GITHUB_ENV
 
-          cat RELEASE.md >> $GITHUB_ENV
+          cat RELEASES.md >> $GITHUB_ENV
 
           echo "EOF" >> $GITHUB_ENV
         env:
