--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,16 +14,15 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Read RELEASES.md
-        id: read_release
+      - name: Read RELEASE.md
         run: |
           TODAY=$(date '+%Y-%m-%d')
 
           echo "RELEASE_BODY<<EOF" >> $GITHUB_ENV
 
-          echo  -e "\`$TODAY\`\n" >> $GITHUB_ENV
+          echo -e "\`$TODAY\`\n" >> $GITHUB_ENV
 
-          cat RELEASES.md >> $GITHUB_ENV
+          cat RELEASE.md >> $GITHUB_ENV
 
           echo "EOF" >> $GITHUB_ENV
         env:
