--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mine-npm-demo",
-  "version": "1.1.4",
+  "version": "1.1.4-beta.0",
   "description": "This is a sample demo about npm",
   "main": "index.js",
   "private": false,
